--- a/package.json
+++ b/package.json
@@ -1,8 +1,28 @@
 {
   "name": "@mindsorg/web3modal-ts",
-  "version": "1.0.0",
+  "version": "1.2.2",
   "description": "Web3modal's provider layer abstraction for simple implementation of web3 wallet connections",
-  "homepage": "https://github.com/dOrgTech/Web3Modal-ts",
+  "homepage": "https://gitlab.com/minds/web3modal-ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/minds/web3modal-ts.git"
+  },
+  "keywords": [
+    "web3",
+    "crypto",
+    "ethereum",
+    "web3modal",
+    "metamask",
+    "walletconnect",
+    "squarelink",
+    "portis",
+    "fortmatic",
+    "arkane",
+    "torus",
+    "authereum",
+    "walletlink",
+    "web3modal-ts"
+  ],
   "author": "Minds",
   "license": "MIT",
   "scripts": {
