--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ofumbi/web3modal-ts",
+  "name": "@envatic/web3modal-ts",
   "version": "1.3.1",
   "description": "Web3modal's provider layer abstraction for simple implementation of web3 wallet connections",
   "homepage": "https://github.com/envatic/web3modal-ts",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@types/node": "^14.11.8",
     "copyfiles": "^2.4.0",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-fetch": "^3.0.0",
     "typescript": "^3.1.3"
   },
   "dependencies": {
